.themes/Black n Red GTK/gtk-3.0/gtk-widgets.css
/* ... */
.warning {
	background-image: -gtk-gradient (linear, left top, left bottom,
		from (shade (@warning_bg_color, 1.04)),
		to (shade (@warning_bg_color, 0.96)));
	border-style: solid;
	border-width: 1;

	color: @warning_fg_color;

	-unico-border-gradient: -gtk-gradient (linear, left top, left bottom,
		from (shade (@warning_bg_color, 0.8)),
		to (shade (@warning_bg_color, 0.75)));
	-unico-inner-stroke-gradient: -gtk-gradient (linear, left top, left bottom,
		from (shade (@warning_bg_color, 1.1)),
		to (shade (@warning_bg_color, 1.04)));
	-unico-inner-stroke-width: 1;
}

.question {
	background-image: -gtk-gradient (linear, left top, left bottom,
		from (shade (@question_bg_color, 1.04)),
		to (shade (@question_bg_color, 0.96)));
	border-style: solid;
	border-width: 1;

	color: @question_fg_color;

	-unico-border-gradient: -gtk-gradient (linear, left top, left bottom,
		from (shade (@question_bg_color, 0.8)),
		to (shade (@question_bg_color, 0.75)));
	-unico-inner-stroke-gradient: -gtk-gradient (linear, left top, left bottom,
		from (shade (@question_bg_color, 1.1)),
		to (shade (@question_bg_color, 1.04)));
	-unico-inner-stroke-width: 1;
}

.error {
	background-image: -gtk-gradient (linear, left top, left bottom,
		from (shade (@error_bg_color, 1.04)),
		to (shade (@error_bg_color, 0.96)));
	border-style: solid;
	border-width: 1;

	color: @error_fg_color;

	-unico-border-gradient: -gtk-gradient (linear, left top, left bottom,
		from (shade (@error_bg_color, 0.8)),
		to (shade (@error_bg_color, 0.75)));
	-unico-inner-stroke-gradient: -gtk-gradient (linear, left top, left bottom,
		from (shade (@error_bg_color, 1.1)),
		to (shade (@error_bg_color, 1.04)));
	-unico-inner-stroke-width: 1;
}

/********
 * menu *
 ********/
.menu {
	padding: 2 0;
	background-image: none;
	background-color: @theme_base_color;
	border-color: shade (@theme_border_color_a, 1.18);
	color: @theme_fg_color;
	border-style: solid;
	border-width: 0;

	-unico-inner-stroke-color: shade (@theme_border_color_a, 1.18);
	-unico-inner-stroke-gradient: none;
	-unico-inner-stroke-width: 1;
}

.menu:selected {
	background-color: @selected_bg_color;
}

.menu.button:hover,
.menu.button:active,
.menu.button:active:insensitive,
.menu.button:insensitive,
.menu.button {
	background-color: shade (@bg_color, 1.08);
	background-image: none;
	border-radius: 0;
	border-style: none;
	border-width: 1;

	-unico-border-gradient: none;
	-unico-glow-radius: 0;
	-unico-inner-stroke-width: 0;
	-unico-outer-stroke-width: 0;
}

/***********
 * menubar *
 ***********/
.menubar {
	-GtkWidget-window-dragging: true;
	color: @theme_fg_color;
	text-shadow: 0 1 alpha (shade (@button_bg_color, 1.25), 0.4);
	background-image: -gtk-gradient (linear,left top,left bottom,
		from (@toolbar_gradient_base),
		to (@toolbar_gradient_final));
	border-width: 0 0 1 0;
	border-color: @toolbar_border;
	border-style: solid;
}

/***************
 * menubaritem *
 ***************/
.menubar.menuitem,
.menubar .menuitem {
	border-radius: 4 4 0 0;
	border-width: 1 1 0 1;
	color: @theme_fg_color;
}

.menubar.menuitem:hover,
.menubar .menuitem *:hover {
	color: @theme_fg_color;
	text-shadow: none;
	border-width: 1;
	border-style: solid;
	background-image: -gtk-gradient (linear, left top, left bottom,
		from (shade (@bg_color, 1.0)),
		to (shade (@bg_color, 0.85)));
	-unico-inner-stroke-style: none;
	-unico-border-gradient: -gtk-gradient (linear, left top, left bottom,
		from (shade (@bg_color, 1.0)),
		to (shade (@bg_color, 0.8)));
}

/************
 * menuitem *
 ************/
.menuitem {
	padding: 3;
	border-radius: 0;
	text-shadow: 0 1 alpha (shade (@button_bg_color, 1.25), 0.4);
	border-style: solid;
	border-width: 0;
	border-color: shade (@menuitem_background_b, 1.0);
	color: @theme_fg_color;
	background-image: -gtk-gradient (linear, left top, left bottom,
		from (shade (@menuitem_background_a, 1.0)),
		to (shade (@menuitem_background_b, 1.0)));
	-unico-bullet-color: @dark_fg_color;
	-unico-inner-stroke-style: none;
}

.menuitem:hover,
.menuitem *:hover {
	background-image: -gtk-gradient (linear, left top, left bottom,
		from (shade (@menuitem_background_a, 1.0)),
		to (shade (@menuitem_background_b, 1.0)));

	color: @selected_fg_color;
	text-shadow: none;
	-unico-bullet-color: @dark_fg_color;
	border-style: solid;
	border-width: 0;
	border-color: shade (@menuitem_background_b, 1.0);
}

.menuitem:insensitive,
.menuitem *:insensitive {
	color: mix (@fg_color, @bg_color, 0.5);
	text-shadow: 0 1 shade (@bg_color, 1.1);
}

.menuitem.check:active,
.menuitem.radio:active {
	color: @fg_color;
	-unico-bullet-color: @fg_color;
}

.menuitem.check:active:hover,
.menuitem.radio:active:hover {
	color: @selected_fg_color;
	-unico-bullet-color: @selected_fg_color;
}

.menuitem GtkCalendar,
.menuitem GtkCalendar.button,
.menuitem GtkCalendar.header,
.menuitem GtkCalendar.view {
	background-color: @bg_color;
	background-image: none;
	border-radius: 0;
	border-style: solid;
	border-width: 0;
	padding: 0;

	color: @fg_color;
}

.menuitem GtkCalendar {
	background-color: shade (@bg_color, 1.3);
	background-image: none;
}

.menuitem .entry {
	background-color: shade (@bg_color, 1.3);
	background-image: none;

	color: @fg_color;

	-unico-border-gradient: -gtk-gradient (linear, left top, left bottom,
		from (shade (@bg_color, 0.75)),
		to (shade (@bg_color, 0.9)));
	-unico-outer-stroke-gradient: -gtk-gradient (linear, left top, left bottom,
		from (shade (@bg_color, 0.98)),
		to (shade (@bg_color, 1.1)));
}

.menuitem GtkScale.trough {
	background-color: @bg_color;
	background-image: none;

	-unico-border-gradient: -gtk-gradient (linear, left top, left bottom,
		from (shade (@bg_color, 0.75)),
		to (shade (@bg_color, 1.15)));
}

.menuitem .accelerator {
	color: alpha (@fg_color, 0.5);
}

.menuitem .accelerator:hover {
	color: alpha (@selected_fg_color, 0.8);
}

.menuitem .accelerator:insensitive {
	color: alpha (mix (@fg_color, @bg_color, 0.5), 0.5);
	text-shadow: 0 -1 shade (@bg_color, 0.7);
}
/* ... */

